--- a/web/app/themes/understrap/assets/css/header.css
+++ b/web/app/themes/understrap/assets/css/header.css
@@ -9,12 +9,19 @@ body {
     margin: 0;
     font-family: 'Mulish', sans-serif;
 }
-nav{
+nav.header-nav{
     background: #fff;
     width: 100%;
     height: 80px;
     position: fixed;
+    z-index: 10;
+    /* padding-bottom: 100px; */
 }
+
+div#index-wrapper {
+    padding-top: 80px;
+}
+
 .header-logo{
     width: 120px;
     margin-left: 20px;
@@ -144,7 +151,7 @@ nav{
         margin-top: 25px;
         transform: translateX(-250px);
         transition: transform 250ms ease-in-out;
-        background: rgba(34, 34, 34, 0.85);
+        background: rgb(34, 34, 34);
     }
     .sidebarMenuInner{
         margin:0;
