--- a/web/app/themes/understrap/css/footer.css
+++ b/web/app/themes/understrap/css/footer.css
@@ -208,18 +208,28 @@ ul.menu-footer-menu li {
   /* padding-right: 50px; */
 }
 
-li.menu-item.menu-item-type-post_type.menu-item-object-page {
+div.menu-footer-menu-container li.menu-item.menu-item-type-post_type.menu-item-object-page {
   list-style: none;
   display: contents;
 }
 
-li.menu-item.menu-item-type-post_type.menu-item-object-page a {
+div.menu-footer-menu-container li.menu-item.menu-item-type-post_type.menu-item-object-page a {
   text-decoration: none;
   color: #D17A5E;
   padding-right: 35px;
   text-transform: uppercase;
   font-weight: 700;
 }
+
+/*  */
+/* ul.menu-footer-menu li a {
+  text-decoration: none;
+  color: #D17A5E;
+  padding-right: 35px;
+  text-transform: uppercase;
+  font-weight: 700;
+} */
+/*  */
 
 div#wrapper-footer-full {
   background-color: transparent;
