--- a/web/app/themes/understrap/css/header.css
+++ b/web/app/themes/understrap/css/header.css
@@ -92,7 +92,7 @@ div#index-wrapper {
   margin-right: 20px;
 }
 
-:is(input[type="checkbox"], .sidebarMenuInner, .social-media) {
+:is(.openSidebarMenu, .sidebarMenuInner, .social-media) {
   display: none;
 }
 
