--- a/web/app/themes/understrap/css/header.css
+++ b/web/app/themes/understrap/css/header.css
@@ -1,568 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Mulish&display=swap');
 
-html, body {
-  overflow-x: hidden;
-  height: 100%;
-}
-
-body {
-  background: #fff;
-  padding: 0;
-  margin: 0;
-  font-family: 'Mulish', sans-serif;
-}
-
-nav.header-nav {
-  background: #fff;
-  width: 100%;
-  height: 80px;
-  position: fixed;
-  z-index: 10;
-}
-
-div#index-wrapper {
-  padding-top: 80px;
-}
-
-.header-logo {
+.img-fluid{
   width: 120px;
-  margin-left: 20px;
 }
-
-#sidebarMenu {
-  width: 60%;
-}
-
-#sidebarMenu li {
-  list-style: none;
-}
-
-#sidebarMenu li a {
-  text-decoration: none;
-}
-
-.header-link ul {
-  width: 100%;
-  margin: 0 14%;
-  margin-top: -25px;
-}
-
-.header-link li {
-  list-style: none;
-  display: inline-block;
-  width: 15%;
-  margin: auto;
-  text-align: center;
-}
-
-.header-link a {
-  margin: auto 2%;
-  font-weight: 600;
+.navbar-dark .navbar-nav .nav-link {
+  color: #343434 !important;
   font-size: 16px;
+  font-family: 'Mulish', sans-serif;
+  font-weight: 600;
   font-style: normal;
   line-height: 28px;
-  color: #343434;
-  font-family: 'Mulish', sans-serif;
-}
-
-/* .header-link li a:before{
-    content: '';
-    height: 2px;
-    bottom: 0;
-    position: absolute;
-    left: 0;
-    right: 0;
-    margin: auto;
-    background-color: #d17a5e;
-} */
-.header-link a:hover {
-  text-decoration: none;
-  color: #343434;
-}
-
-.header-widget li {
-  list-style: none;
-  text-decoration: none;
-  display: inline-flex;
-}
-
-.header-widget {
-  float: right;
-  margin: -3% 0;
-  margin-right: 20px;
-}
-
-:is(.openSidebarMenu, .sidebarMenuInner, .social-media) {
-  display: none;
-}
-
-@media screen and (min-width: 1024px) {
-  .header-widget {
-    margin: -2%;
-    margin-right: 15px;
-  }
-}
-
-@media screen and (max-width: 923px) {
-  .header-link a {
-    font-size: 15px;
-  }
-
-  .header-logo {
-    width: 110px;
-  }
-}
-
-@media screen and (max-width: 868px) {
-  .header-link a {
-    font-size: 14px;
-  }
-}
-
-@media screen and (max-width: 813px) {
-  .header-logo {
-    width: 100px;
-  }
-
-  .header-link a {
-    font-size: 13px;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  :is(input[type="checkbox"], .sidebarMenuInner, .social-media) {
-    display: initial;
-  }
-
-  nav.header-nav {
-    background: #fff;
-    width: 100%;
-    height: 60px;
-    position: fixed;
-    z-index: 10;
-  }
-
-  .header-link {
-    display: none;
-  }
-
-  /* .header {
-        display: block;
-        margin: 0 auto;
-        width: 100%;
-        max-width: 100%;
-        box-shadow: none;
-        background-color: crimson;
-        position: fixed;
-        height: 80px!important;
-        overflow: hidden;
-        z-index: 10;
-    } */
-<<<<<<< HEAD
-    .main {
-        margin: 0 auto;
-        display: block;
-        height: 100%;
-        margin-top: 60px;
-    }
-    .mainInner{
-        display: table;
-        height: 100%;
-        width: 100%;
-        text-align: center;
-    }
-    .mainInner div{
-        display:table-cell;
-        vertical-align: middle;
-        font-size: 3em;
-        font-weight: bold;
-        letter-spacing: 1.25px;
-    }
-    .header-logo{
-        margin: 0;
-        padding: 0;
-        width: 120px;
-        margin: 0 40%;
-        margin-top: -1%;
-    }
-    .header-logo img{
-        width: 100%;
-        margin-top: 25px;
-    }
-    #sidebarMenu {
-        height: 100%;
-        position: fixed;
-        left: 0;
-        width: 250px;
-        margin-top: 16px;
-        transform: translateX(-250px);
-        transition: transform 250ms ease-in-out;
-        background: rgb(34, 34, 34);
-    }
-    .sidebarMenuInner{
-        margin:0;
-        padding:0;
-        border-top: 1px solid rgba(255, 255, 255, 0.20);
-    }
-    .sidebarMenuInner li{
-        list-style: none;
-        color: #fff;
-        font-weight: bold;
-        padding: 20px;
-        cursor: pointer;
-        border-bottom: 1px solid rgba(255, 255, 255, 0.10);
-    }
-    .sidebarMenuInner li span{
-        display: block;
-        font-size: 14px;
-        color: rgba(255, 255, 255, 0.50);
-    }
-    .sidebarMenuInner li a{
-        color: #fff;
-        font-weight: bold;
-        cursor: pointer;
-        text-decoration: none;
-        font-style: normal;
-        line-height: 28px;
-        font-size: 16px;
-        align-items: center;
-    }
-    input[type="checkbox"]:checked ~ #sidebarMenu {
-        transform: translateX(0);
-    }
-    
-    input[type=checkbox] {
-        transition: all 0.3s;
-        box-sizing: border-box;
-        display: none;
-    }
-    .sidebarIconToggle {
-        transition: all 0.3s;
-        box-sizing: border-box;
-        cursor: pointer;
-        position: absolute;
-        z-index: 99;
-        height: 100%;
-        width: 100%;
-        top: 25px;
-        left: 15px;
-        height: 22px;
-        width: 22px;
-    }
-    .spinner {
-        transition: all 0.3s;
-        box-sizing: border-box;
-        position: absolute;
-        height: 3px;
-        width: 100%;
-        background-color: #343434;
-    }
-    .horizontal {
-        transition: all 0.3s;
-        box-sizing: border-box;
-        position: relative;
-        float: left;
-        margin-top: 3px;
-    }
-    .diagonal.part-1 {
-        position: relative;
-        transition: all 0.3s;
-        box-sizing: border-box;
-        float: left;
-    }
-    .diagonal.part-2 {
-        transition: all 0.3s;
-        box-sizing: border-box;
-        position: relative;
-        float: left;
-        margin-top: 3px;
-    }
-    input[type=checkbox]:checked ~ .sidebarIconToggle > .horizontal {
-        transition: all 0.3s;
-        box-sizing: border-box;
-        opacity: 0;
-    }
-    input[type=checkbox]:checked ~ .sidebarIconToggle > .diagonal.part-1 {
-        transition: all 0.3s;
-        box-sizing: border-box;
-        transform: rotate(135deg);
-        margin-top: 6px;
-    }
-    input[type=checkbox]:checked ~ .sidebarIconToggle > .diagonal.part-2 {
-        transition: all 0.3s;
-        box-sizing: border-box;
-        transform: rotate(-135deg);
-        margin-top: -7px;
-    }
-    ul .social-media{
-        display: initial;
-    }
-    .social-media{
-        margin:0;
-        padding:0;
-        font-size: 20px;
-    }
-    .social-media li{
-        list-style: none;
-        color: #fff;
-        padding: 20px;
-        cursor: pointer;
-        margin-left: 7%;
-        display: inline-block;
-    }
-    .social-media i{
-        color: #fff;
-    }
-    .header-widget{
-        margin-right: 15px;
-    }
-  .main {
-    margin: 0 auto;
-    display: block;
-    height: 100%;
-    margin-top: 60px;
-  }
-
-  .mainInner {
-    display: table;
-    height: 100%;
-    width: 100%;
-    text-align: center;
-  }
-
-  .mainInner div {
-    display: table-cell;
-    vertical-align: middle;
-    font-size: 3em;
-    font-weight: bold;
-    letter-spacing: 1.25px;
-  }
-
-  .header-logo {
-    margin: 0;
-    padding: 0;
-    width: 120px;
-    margin: 0 40%;
-    margin-top: -1%;
-  }
-
-  .header-logo img {
-    width: 100%;
-    margin-top: 25px;
-  }
-
-  #sidebarMenu {
-    height: 100%;
-    position: fixed;
-    left: 0;
-    width: 250px;
-    margin-top: 16px;
-    transform: translateX(-250px);
-    transition: transform 250ms ease-in-out;
-    background: rgb(34, 34, 34);
-  }
-
-  .sidebarMenuInner {
-    margin: 0;
-    padding: 0;
-    border-top: 1px solid rgba(255, 255, 255, 0.20);
-  }
-
-  .sidebarMenuInner li {
-    list-style: none;
-    color: #fff;
-    text-transform: uppercase;
-    font-weight: bold;
-    padding: 20px;
-    cursor: pointer;
-    border-bottom: 1px solid rgba(255, 255, 255, 0.10);
-  }
-
-  .sidebarMenuInner li span {
-    display: block;
-    font-size: 14px;
-    color: rgba(255, 255, 255, 0.50);
-  }
-
-  .sidebarMenuInner li a {
-    color: #fff;
-    text-transform: uppercase;
-    font-weight: bold;
-    cursor: pointer;
-    text-decoration: none;
-    font-style: normal;
-    line-height: 28px;
-    font-size: 16px;
-    align-items: center;
-  }
-
-  input[type="checkbox"]:checked~#sidebarMenu {
-    transform: translateX(0);
-  }
-
-  input[type=checkbox] {
-    transition: all 0.3s;
-    box-sizing: border-box;
-    display: none;
-  }
-
-  .sidebarIconToggle {
-    transition: all 0.3s;
-    box-sizing: border-box;
-    cursor: pointer;
-    position: absolute;
-    z-index: 99;
-    height: 100%;
-    width: 100%;
-    top: 25px;
-    left: 15px;
-    height: 22px;
-    width: 22px;
-  }
-
-  .spinner {
-    transition: all 0.3s;
-    box-sizing: border-box;
-    position: absolute;
-    height: 3px;
-    width: 100%;
-    background-color: #343434;
-  }
-
-  .horizontal {
-    transition: all 0.3s;
-    box-sizing: border-box;
-    position: relative;
-    float: left;
-    margin-top: 3px;
-  }
-
-  .diagonal.part-1 {
-    position: relative;
-    transition: all 0.3s;
-    box-sizing: border-box;
-    float: left;
-  }
-
-  .diagonal.part-2 {
-    transition: all 0.3s;
-    box-sizing: border-box;
-    position: relative;
-    float: left;
-    margin-top: 3px;
-  }
-
-  input[type=checkbox]:checked~.sidebarIconToggle>.horizontal {
-    transition: all 0.3s;
-    box-sizing: border-box;
-    opacity: 0;
-  }
-
-  input[type=checkbox]:checked~.sidebarIconToggle>.diagonal.part-1 {
-    transition: all 0.3s;
-    box-sizing: border-box;
-    transform: rotate(135deg);
-    margin-top: 6px;
-  }
-
-  input[type=checkbox]:checked~.sidebarIconToggle>.diagonal.part-2 {
-    transition: all 0.3s;
-    box-sizing: border-box;
-    transform: rotate(-135deg);
-    margin-top: -7px;
-  }
-
-  ul .social-media {
-    display: initial;
-  }
-
-  .social-media {
-    margin: 0;
-    padding: 0;
-    font-size: 20px;
-  }
-
-  .social-media li {
-    list-style: none;
-    color: #fff;
-    padding: 20px;
-    cursor: pointer;
-    margin-left: 7%;
-    display: inline-block;
-  }
-
-  .social-media i {
-    color: #fff;
-  }
-
-  .header-widget {
-    margin-right: 15px;
-  }
->>>>>>> e8f60efcb5c7e0c03a63ed3a5cf92873808ff530
-}
-
-@media screen and (max-width: 425px) {
-  .header-logo {
-    margin: 0;
-    padding: 0;
-    width: 120px;
-    margin: 0 35%;
-    margin-top: -1%;
-  }
-
-  .header-logo img {
-    width: 100%;
-    margin-top: 25px;
-  }
-
-  .header-widget {
-    margin: -6%;
-    margin-right: 15px;
-  }
-
-  #sidebarMenu {
-    height: 100%;
-    position: fixed;
-    left: 0;
-    width: 250px;
-    margin-top: 13px;
-    transform: translateX(-250px);
-    transition: transform 250ms ease-in-out;
-    background: rgb(34, 34, 34);
-  }
-}
-
-@media screen and (max-width: 375px) {
-  .header-logo {
-    margin: 0;
-    padding: 0;
-    width: 120px;
-    margin: 0 33%;
-    margin-top: -1%;
-  }
-
-  .header-logo img {
-    width: 100%;
-    margin-top: 25px;
-  }
-}
-
-@media screen and (max-width: 320px) {
-  .header-logo {
-    margin: 0;
-    padding: 0;
-    width: 120px;
-    margin: 0 30%;
-    margin-top: -1%;
-  }
-
-  .header-logo img {
-    width: 100%;
-    margin-top: 25px;
-  }
-
-  .header-widget {
-    margin: -9%;
-    margin-right: 15px;
-  }
 }
