--- a/web/app/themes/understrap/css/header.css
+++ b/web/app/themes/understrap/css/header.css
@@ -1,3 +1,8 @@
+article#post-1 {
+    display: none;
+}
+
+
 @import url('https://fonts.googleapis.com/css2?family=Mulish&display=swap');
 html, body {
     overflow-x: hidden;
