--- a/web/app/themes/understrap/css/header.css
+++ b/web/app/themes/understrap/css/header.css
@@ -65,10 +65,10 @@ nav{
 }
 .header-widget{
     float: right;
-    margin: -3% 0;
+    margin: -3.5% 0;
     margin-right: 20px;
 }
-:is(input[type="checkbox"], .sidebarMenuInner, .social-media){
+:is(.openSidebarMenu, .sidebarMenuInner, .social-media){
     display: none;
 }
 @media screen and (min-width: 1024px){
@@ -102,6 +102,13 @@ nav{
     :is(input[type="checkbox"], .sidebarMenuInner, .social-media){
         display: initial;
     }
+    nav{
+    background: #fff;
+    width: 100%;
+    height: 50px;
+    position: fixed;
+    z-index: 99;
+}
     .header-link{
         display: none;
     }
@@ -151,10 +158,11 @@ nav{
         position: fixed;
         left: 0;
         width: 250px;
-        margin-top: 25px;
+        margin-top: 20px;
         transform: translateX(-250px);
         transition: transform 250ms ease-in-out;
-        background: rgba(34, 34, 34, 0.85);
+        background: rgb(34, 34, 34);
+        z-index: 99;
     }
     .sidebarMenuInner{
         margin:0;
@@ -164,7 +172,6 @@ nav{
     .sidebarMenuInner li{
         list-style: none;
         color: #fff;
-        text-transform: uppercase;
         font-weight: bold;
         padding: 20px;
         cursor: pointer;
@@ -177,7 +184,6 @@ nav{
     }
     .sidebarMenuInner li a{
         color: #fff;
-        text-transform: uppercase;
         font-weight: bold;
         cursor: pointer;
         text-decoration: none;
@@ -203,7 +209,7 @@ nav{
         z-index: 99;
         height: 100%;
         width: 100%;
-        top: 30px;
+        top: 22px;
         left: 15px;
         height: 22px;
         width: 22px;
@@ -286,7 +292,7 @@ nav{
     }
     .header-logo img{
         width: 100%;
-        margin-top: 25px;
+        margin-top: 15px;
     }
     .header-widget{
         margin: -6%;
