--- a/web/app/themes/understrap/css/form.css
+++ b/web/app/themes/understrap/css/form.css
@@ -65,5 +65,10 @@ input.wpcf7-form-control.wpcf7-submit:hover {
     padding-right: 10px;
     padding-left: 10px;
   }
+}
 
+@media screen and (max-width: 768px) {
+  h2#nous-contacter {
+    padding-left: 0;
+  }
 }
