--- a/web/app/themes/understrap/css/footer.css
+++ b/web/app/themes/understrap/css/footer.css
@@ -279,6 +279,7 @@ div.menu-footer-menu-container li.menu-item.menu-item-type-post_type.menu-item-o
 
   #social-footer-ico-container{
     padding-top: 60px;
+    text-align: center;
   }
 
   span.ico {
